<resources>
    <string name="app_name">Sudoku</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="begin">Begin!</string>
    <string name="colordoku">COLORDOKU</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="colormix">COLORMIX</string>
    <string name="mix" >MIX!!!!</string>
    />
</resources>
