<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <GridLayout
        android:id="@+id/buttonlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/redButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@android:color/holo_red_dark"
            android:text="@string/_1" />

        <Button
            android:id="@+id/orangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/_2" />

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@android:color/holo_orange_light"
            android:text="@string/_3" />

        <Button
            android:id="@+id/limeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@android:color/holo_green_light"
            android:text="@string/_4" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@android:color/holo_green_dark"
            android:text="@string/_5" />

        <Button
            android:id="@+id/lightblueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_6" />

        <Button
            android:id="@+id/blueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_7" />

        <Button
            android:id="@+id/pinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@color/pink"
            android:text="@string/_8" />

        <Button
            android:id="@+id/purpleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@android:color/holo_purple"
            android:text="@string/_9" />
    </GridLayout>

    <TableLayout
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:id="@+id/Row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="1.5dp"
            android:paddingStart="1.5dp">

            <fragment
                android:id="@+id/Box0"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/Box1"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/Box2"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box3"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box4"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box5"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box6"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box7"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box8"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />


        </TableRow>
        <TableRow
            android:id="@+id/Row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="1.5dp"
            android:paddingStart="1.5dp">

            <fragment
                android:id="@+id/Box0"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/Box1"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/Box2"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box3"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box4"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box5"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box6"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box7"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />

            <fragment
                android:id="@+id/box8"
                android:name="com.example.sudoku.Block"
                android:layout_width="42dp"
                android:layout_height="42dp"
                tools:layout="@layout/fragment_sudoku_block" />


        </TableRow>

    </TableLayout>

</RelativeLayout>